# rinpy

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/rinpy/: __init__.py  __main__.py  calculation_options.json  centrality_analyzer.py  centrality_pdb_mapper.py  constants.py  font_utils.py  graph_plotter.py  hinge_analyzer.py  log_util.py  logging_config.py  pymol_utils.py  quantile_analyzer.py  residue_network_builder.py  rin_process.py  style_config.py  trajectory.py  utils.py
tests/: rinpy_kras_sos1_test.py  rinpy_kras_sos1_test.sh
